@@ -9,6 +9,7 @@ VERSION 3.0.1
      notification if a non-Wikipedia link was clicked.
    * Added an option to select if track's artist is shown for entries under various
      artists / different album artist in context browser (BR 276039, BR 248101)
+   * Indicate which search option is active in Wikipedia applet (BR 332010)
 
   CHANGES:
    * Improve strings in user interface (incl. BR 343896, BR 234854)
